added nav and img to html- styled desktop view

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,13 @@
 .home {
 
   .intro {
+    padding-top: 100px;
+
+    img{
+      max-width: 100%;
+      height: auto;
+      border-radius: 5px; 
+    }
 
     h2 {
       padding: 15px;
@@ -58,6 +65,7 @@
       }
 
       .btn {
+        .button-creator(10rem, 3.5rem, 1.8rem);
       }
     }
 
