--- a/css/index.css
+++ b/css/index.css
@@ -160,6 +160,34 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.nav-header {
+  width: 100%;
+  height: 100px;
+  background: #F6F6F6;
+  position: fixed;
+  padding-top: 3px;
+}
+.nav-header .nav-container {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.nav-header h1 {
+  margin: 10px 0 19px 0;
+  font-size: 4rem;
+}
+.nav-header nav {
+  width: 375px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.nav-header nav a {
+  font-size: 1.6rem;
+  color: #454A59;
+  text-decoration: none;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -169,6 +197,14 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home .intro {
+  padding-top: 100px;
+}
+.home .intro img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 5px;
 }
 .home .intro h2 {
   padding: 15px;
@@ -211,6 +247,21 @@ footer {
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
+}
+.home .walk .walk-text .btn {
+  width: 10rem;
+  height: 3.5rem;
+  background-color: #22283A;
+  color: white;
+  font-size: 1.8rem;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.home .walk .walk-text .btn:hover {
+  background: gray;
+  color: #22283A;
 }
 .home .walk .walk-img {
   width: 46%;
