--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,22 @@
 // Mixins Here
+.center(){
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.button-creator(@width, @height, @font-size) {
+    width: @width;
+    height: @height;
+    background-color: @btn-bg-color;
+    color: white;
+    font-size: @font-size;
+    border-radius: 5px;
+    .center();
+  
+    
+    &:hover {
+        background: gray;
+        color: @btn-bg-color;
+      }
+  }
