--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,36 @@
 // Navigation code here
+
+.nav-header{
+    width: 100%;
+    height: 100px;
+    background: @nav-bg;
+    position: fixed;
+    padding-top: 3px; 
+      
+
+    .nav-container{
+        height: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;  
+    }
+
+    h1{ 
+        margin: 10px 0 19px 0;
+        font-size: 4rem;
+    }
+       
+
+    nav {
+       width: 375px;
+       display: flex;
+       flex-direction: row;
+       justify-content: space-between;
+   
+       a {
+        font-size: 1.6rem;
+        color: @nav-font;
+        text-decoration: none;
+      }
+    }  
+}
