--- a/css/index.css
+++ b/css/index.css
@@ -223,6 +223,22 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images {
+    width: 100%;
+    padding: 0;
+  }
+  .home .space-images .blast {
+    width: 90%;
+    margin: 20px 24px 20px 25px;
+  }
+  .home .space-images .sky {
+    display: none;
+  }
+  .home .space-images .launch {
+    display: none;
+  }
+}
 .home .visit-planets {
   padding: 15px;
 }
@@ -239,8 +255,22 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    width: 100%;
+    padding: 0 20px;
+    margin-top: 20px;
+    flex-direction: column-reverse;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+    padding: 0;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -259,6 +289,13 @@ footer {
   justify-content: center;
   align-items: center;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    height: 70px;
+    margin-bottom: 20px;
+  }
+}
 .home .walk .walk-text .btn:hover {
   background: gray;
   color: #22283A;
@@ -266,6 +303,12 @@ footer {
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 20px 0;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
