--- a/less/home-page.less
+++ b/less/home-page.less
@@ -32,6 +32,26 @@
       border-radius: 20px;
       height: 100%;
     }
+
+    @media @phone {
+      width: 100%;
+      padding: 0;
+      
+      .blast{
+        width: 90%;
+        margin: 20px 24px 20px 25px;
+      }
+
+      .sky{
+        display: none;
+      }
+
+      .launch{
+        display: none;
+      }
+
+    }
+
   }
 
   .visit-planets {
@@ -47,14 +67,28 @@
   }
 
   .walk {
+    
     margin-top: 60px;
     border-top: 1px solid @main-border-color;
     padding: 50px 60px;
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      width: 100%;
+      padding: 0 20px;
+      margin-top: 20px;
+      flex-direction: column-reverse;
+
+    }
+
     .walk-text {
       width: 50%;
+
+      @media @phone {
+        width: 100%;
+        padding: 0;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -72,6 +106,11 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone {
+        width: 100%;
+        margin: 20px 0;
+      }
       
       img {
         width: 100%;
