--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,4 +1,9 @@
 // Mixins Here
+
+.test(){
+    border: 1px solid red;
+}
+
 .center(){
     display: flex;
     justify-content: center;
@@ -13,6 +18,12 @@
     font-size: @font-size;
     border-radius: 5px;
     .center();
+
+    @media @phone{
+        width: 100%;
+        height: 70px;  
+        margin-bottom: 20px;
+    }
   
     
     &:hover {
